--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -254,37 +254,118 @@
                         </div>
                     </div>
                 </div>
-                <div class="screen fifth-screen">
-                    <div class="container-page">
-                        <div class="container-content">
-                            <header class="header">
-                                <div class="header__wrapper">
-                                    <img class="header__logo logo" src="../img/ico/logo.svg" alt="">
-                                    <nav class="header__nav">
-                                        <ul class="header__menu menu">
-                                            <li class="menu__item menu-items-txt">Продукты</li>
-                                            <li class="menu__item menu-items-txt">Технологии</li>
-                                            <li class="menu__item menu-items-txt">Характеристики</li>
-                                            <li class="menu__item menu-items-txt">О Компании</li>
-                                            <li class="menu__item menu-items-txt">Блог</li>
-                                        </ul>
-                                    </nav>
-                                    <div class="header__contacts header-contacts">
-                                        <div class="header-contacts__calls">
-                                            <p class="email menu-contacts-txt">info@gefestcapital.ru</p>
-                                            <p class="phone menu-contacts-txt">+7 495 661 77 71</p>
+            </div>
+        </div>
+        <div class="screen fifth-screen">
+            <div class="container-page">
+                <div class="container-content">
+                    <header class="header">
+                        <div class="header__wrapper">
+                            <img class="header__logo logo" src="../img/ico/logo.svg" alt="">
+                            <nav class="header__nav">
+                                <ul class="header__menu menu">
+                                    <li class="menu__item menu-items-txt">Продукты</li>
+                                    <li class="menu__item menu-items-txt">Технологии</li>
+                                    <li class="menu__item menu-items-txt">Характеристики</li>
+                                    <li class="menu__item menu-items-txt">О Компании</li>
+                                    <li class="menu__item menu-items-txt">Блог</li>
+                                </ul>
+                            </nav>
+                            <div class="header__contacts header-contacts">
+                                <div class="header-contacts__calls">
+                                    <p class="email menu-contacts-txt">info@gefestcapital.ru</p>
+                                    <p class="phone menu-contacts-txt">+7 495 661 77 71</p>
+                                </div>
+                                <div class="header-contacts__buttons">
+                                    <button class="button button_transparent">Купить</button>
+                                    <button class="button button_purple-text">Обратная связь</button>
+                                </div>
+                            </div>
+                        </div>
+                    </header>
+                    <div class="fifth-screen__content">
+                        <div class="fifth-screen__text-block">
+                            <img class="fifth-screen__bcg" src="../img/Product-page/hero-bg.png" alt="">
+                            <h3 class="fifth-screen__text">Всё, что нужно — прозрачный OLED-дисплей от Гефест Капитал и немного креативности!</h3>
+                        </div>
+                        <div class="button button_purple-text second-screen__button fifth-screen__button">
+                            <p>Заказать</p>
+                            <img src="../img/ico/percent-ico.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="screen sixth-screen">
+            <div class="container-page">
+                <div class="container-content">
+                    <header class="header">
+                        <div class="header__wrapper">
+                            <img class="header__logo logo" src="../img/ico/logo.svg" alt="">
+                            <nav class="header__nav">
+                                <ul class="header__menu menu">
+                                    <li class="menu__item menu-items-txt">Продукты</li>
+                                    <li class="menu__item menu-items-txt">Технологии</li>
+                                    <li class="menu__item menu-items-txt">Характеристики</li>
+                                    <li class="menu__item menu-items-txt">О Компании</li>
+                                    <li class="menu__item menu-items-txt">Блог</li>
+                                </ul>
+                            </nav>
+                            <div class="header__contacts header-contacts">
+                                <div class="header-contacts__calls">
+                                    <p class="email menu-contacts-txt">info@gefestcapital.ru</p>
+                                    <p class="phone menu-contacts-txt">+7 495 661 77 71</p>
+                                </div>
+                                <div class="header-contacts__buttons">
+                                    <button class="button button_transparent">Купить</button>
+                                    <button class="button button_purple-text">Обратная связь</button>
+                                </div>
+                            </div>
+                        </div>
+                    </header>
+                    <div class="sixth-screen__content-wrapper">
+                        <div class="sixth-screen__left-part sixth-screen__content">
+                            <div id="rent-content-swiper" class="swiper-container rent-content-swiper">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide rent-content-slide"><img src="../img/Product-page/6-slider-1.png"></div>
+                                    <div class="swiper-slide rent-content-slide"><img src="../img/Product-page/6-slider-1.png"></div>
+                                    <div class="swiper-slide rent-content-slide"><img src="../img/Product-page/6-slider-1.png"></div>
+                                </div>
+                                <div class="rent-content-swiper__nav">
+                                    <div class="swiper-button-prev rent-content-left"></div>
+                                    <div id="counter" class="counterMain">1/3</div>
+                                    <div class="swiper-button-next rent-content-right"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sixth-screen__right-part sixth-screen__content">
+                            <form id="rent-content-form" class="rent-content-form">
+                                <p class="form-title">Аренда и контент</p>
+                                <div class="rent-content-form__info">
+                                    <div class="rent-content-form__tabs">
+                                        <div class="rent-content-form__tab"></div>
+                                        <div class="rent-content-form__tab"></div>
+                                        <div class="rent-content-form__tab"></div>
+                                    </div>
+                                    <div class="rent-content-form__tab-content">
+                                        <div class="">
+                                            <div class="">1 день</div>
+                                            <div class="">60 000 р</div>
                                         </div>
-                                        <div class="header-contacts__buttons">
-                                            <button class="button button_transparent">Купить</button>
-                                            <button class="button button_purple-text">Обратная связь</button>
+                                        <div class="">
+                                            <div class="">2 дня</div>
+                                            <div class="">90 000 р</div>
+                                        </div>
+                                        <div class="">
+                                            <div class="">выставка</div>
+                                            <div class="">120 000 р</div>
                                         </div>
                                     </div>
+                                    <div class="rent-content-form__tab-content"></div>
+                                    <div class="rent-content-form__tab-content"></div> 
                                 </div>
-                            </header>
-                            <div class="fifth-screen__content">
-                                <img class="fifth-screen__bcg" src="../img/Product-page/hero-bg.png" alt="">
-                                <h3 class="fifth-screen__text">Всё, что нужно — прозрачный OLED-дисплей от Гефест Капитал и немного креативности!</h3>
-                            </div>
+                                
+                            </form>
                         </div>
                     </div>
                 </div>
