--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -26,10 +26,10 @@
                                     </ul>
                                 </nav>
                                 <div class="header__contacts header-contacts">
-                                    <div class="header-contacts__calls">
+                                    <!-- <div class="header-contacts__calls">
                                         <p class="email menu-contacts-txt">info@gefestcapital.ru</p>
                                         <p class="phone menu-contacts-txt">+7 495 661 77 71</p>
-                                    </div>
+                                    </div> -->
                                     <div class="header-contacts__buttons">
                                         <button class="button button_transparent">Купить</button>
                                         <button class="button button_purple-text">Обратная связь</button>
@@ -222,10 +222,10 @@
                                     </ul>
                                 </nav>
                                 <div class="header__contacts header-contacts">
-                                    <div class="header-contacts__calls">
+                                    <!-- <div class="header-contacts__calls">
                                         <p class="email menu-contacts-txt">info@gefestcapital.ru</p>
                                         <p class="phone menu-contacts-txt">+7 495 661 77 71</p>
-                                    </div>
+                                    </div> -->
                                     <div class="header-contacts__buttons">
                                         <button class="button button_transparent">Купить</button>
                                         <button class="button button_purple-text">Обратная связь</button>
@@ -272,10 +272,10 @@
                                 </ul>
                             </nav>
                             <div class="header__contacts header-contacts">
-                                <div class="header-contacts__calls">
+                                <!-- <div class="header-contacts__calls">
                                     <p class="email menu-contacts-txt">info@gefestcapital.ru</p>
                                     <p class="phone menu-contacts-txt">+7 495 661 77 71</p>
-                                </div>
+                                </div> -->
                                 <div class="header-contacts__buttons">
                                     <button class="button button_transparent">Купить</button>
                                     <button class="button button_purple-text">Обратная связь</button>
@@ -286,7 +286,8 @@
                     <div class="fifth-screen__content">
                         <div class="fifth-screen__text-block">
                             <img class="fifth-screen__bcg" src="../img/Product-page/hero-bg.png" alt="">
-                            <h3 class="fifth-screen__text">Всё, что нужно — прозрачный OLED-дисплей от Гефест Капитал и немного креативности!</h3>
+                            <h3 class="fifth-screen__text">Всё, что нужно — прозрачный OLED-дисплей от Гефест Капитал и
+                                немного креативности!</h3>
                         </div>
                         <div class="button button_purple-text second-screen__button fifth-screen__button">
                             <p>Заказать</p>
@@ -312,10 +313,10 @@
                                 </ul>
                             </nav>
                             <div class="header__contacts header-contacts">
-                                <div class="header-contacts__calls">
+                                <!-- <div class="header-contacts__calls">
                                     <p class="email menu-contacts-txt">info@gefestcapital.ru</p>
                                     <p class="phone menu-contacts-txt">+7 495 661 77 71</p>
-                                </div>
+                                </div> -->
                                 <div class="header-contacts__buttons">
                                     <button class="button button_transparent">Купить</button>
                                     <button class="button button_purple-text">Обратная связь</button>
@@ -327,9 +328,12 @@
                         <div class="sixth-screen__left-part sixth-screen__content">
                             <div id="rent-content-swiper" class="swiper-container rent-content-swiper">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide rent-content-slide"><img src="../img/Product-page/6-slider-1.png"></div>
-                                    <div class="swiper-slide rent-content-slide"><img src="../img/Product-page/6-slider-1.png"></div>
-                                    <div class="swiper-slide rent-content-slide"><img src="../img/Product-page/6-slider-1.png"></div>
+                                    <div class="swiper-slide rent-content-slide"><img
+                                            src="../img/Product-page/6-slider-1.png"></div>
+                                    <div class="swiper-slide rent-content-slide"><img
+                                            src="../img/Product-page/6-slider-1.png"></div>
+                                    <div class="swiper-slide rent-content-slide"><img
+                                            src="../img/Product-page/6-slider-1.png"></div>
                                 </div>
                                 <div class="rent-content-swiper__nav">
                                     <div class="swiper-button-prev rent-content-left"></div>
@@ -343,65 +347,70 @@
                                 <p class="rent-content__title">Аренда и контент</p>
                                 <div class="rent-content__content-wrapper">
                                     <div class="rent-content__tabs">
-                                        <div class="rent-content-form__tab"></div>
-                                        <div class="rent-content-form__tab"></div>
-                                        <div class="rent-content-form__tab"></div>
+                                        <div class="rent-content__tab">Аренда</div>
+                                        <div class="rent-content__tab">Покупка</div>
+                                        <div class="rent-content__tab">Контент</div>
                                     </div>
-                                    <div class="rent-content__tab-content tab-content">
-                                        <div class="tab-content__item">
-                                            <div class="tab-content__key">1 день</div>
-                                            <div class="tab-content__value">60 000 р</div>
+                                    <div class="rent-content__tab-contents">
+                                        <div class="rent-content__tab-content tab-content">
+                                            <div class="tab-content__item">
+                                                <div class="tab-content__key">1 день</div>
+                                                <div class="tab-content__value">60 000 р</div>
+                                            </div>
+                                            <div class="tab-content__item">
+                                                <div class="tab-content__key">2 дня</div>
+                                                <div class="tab-content__value">90 000 р</div>
+                                            </div>
+                                            <div class="tab-content__item">
+                                                <div class="tab-content__key">выставка</div>
+                                                <div class="tab-content__value">120 000 р</div>
+                                            </div>
                                         </div>
-                                        <div class="tab-content__item">
-                                            <div class="tab-content__key">2 дня</div>
-                                            <div class="tab-content__value">90 000 р</div>
+                                        <div class="rent-content__tab-content tab-content">
+                                            <div class="tab-content__item">
+                                                <div class="tab-content__key">сенсорный</div>
+                                                <div class="tab-content__value">1 500 000 р</div>
+                                            </div>
+                                            <div class="tab-content__item">
+                                                <div class="tab-content__key">не сенсорный</div>
+                                                <div class="tab-content__value">1 000 000 р</div>
+                                            </div>
                                         </div>
-                                        <div class="tab-content__item">
-                                            <div class="tab-content__key">выставка</div>
-                                            <div class="tab-content__value">120 000 р</div>
+                                        <div class="rent-content__tab-content tab-content">
+                                            <div class="tab-content__item">
+                                                <div class="tab-content__key">3д модели</div>
+                                                <div class="tab-content__value">по запросу</div>
+                                            </div>
+                                            <div class="tab-content__item">
+                                                <div class="tab-content__key">Инфографика</div>
+                                                <div class="tab-content__value">по запросу</div>
+                                            </div>
+                                            <div class="tab-content__item">
+                                                <div class="tab-content__key">видеоконтент</div>
+                                                <div class="tab-content__value">по запросу</div>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="rent-content__tab-content tab-content">
-                                        <div class="tab-content__item">
-                                            <div class="tab-content__key">сенсорный</div>
-                                            <div class="tab-content__value">1 500 000 р</div>
-                                        </div>
-                                        <div class="tab-content__item">
-                                            <div class="tab-content__key">не сенсорный</div>
-                                            <div class="tab-content__value">1 000 000 р</div>
-                                        </div>
-                                    </div>
-                                    <div class="rent-content__tab-content tab-content">
-                                        <div class="tab-content__item">
-                                            <div class="tab-content__key">3д модели</div>
-                                            <div class="tab-content__value">по запросу</div>
-                                        </div>
-                                        <div class="tab-content__item">
-                                            <div class="tab-content__key">Инфографика</div>
-                                            <div class="tab-content__value">по запросу</div>
-                                        </div>
-                                        <div class="tab-content__item">
-                                            <div class="tab-content__key">видеоконтент</div>
-                                            <div class="tab-content__value">по запросу</div>
-                                        </div>
-                                    </div> 
+
                                 </div>
-                                <form id="rent-content-form">
+                                <form id="rent-content-form" class="rent-content-form">
                                     <div class="rent-content-form__row">
                                         <div class="form-item">
-                                            <label for="name">Имя:</label>
-                                            <input type="text" id="name" name="name">
+                                            <label for="name"></label>
+                                            <input type="text" id="name" name="name" placeholder="ваше имя">
                                         </div>
                                         <div class="form-item">
-                                            <label for="phone">Телефон:</label>
-                                            <input type="text" id="phone" name="phone">
+                                            <label for="phone"></label>
+                                            <input type="text" id="phone" name="phone" placeholder="+7 _ _ _   _ _ _   _ _   _ _">
                                         </div>
                                     </div>
                                     <div class="rent-content-form__row">
-                                        <p>Нажимая на кнопку, вы <a href="#">соглашаетесь</a> на обработку персональных данных</p>
-                                        <button type="submit">Отправить</button>
+                                        <p>Нажимая на кнопку, вы <a href="#">соглашаетесь</a> на обработку персональных
+                                            данных</p>
+                                        <button class="rent-content-form__submit button button_purple-text button_purple-text--submit" type="submit">Отправить</button>
                                     </div>
                                 </form>
+                                <script async src="https://okocrm.ru/static/oko-static/js/form.js?token=DGklp8IO7_iwlJgAzOp8Cw65VsZDw27EwagtkfzAb4A0LeP3klBWcCB2r-QFx-NS7vSntheO1Pe5hx7rn_Etc_IY8p2HQnscsHo4xRZRWU084a3wSrZemcC95ymMjfwcnNaaMrQB2PStjLzA4Gq4C1OvT7IME36xium5xPZdX2UNFLo3cXDhC107aPHdlHAMa4wy9HegDfL5zk70zqFX4lUYh86hYTNAQkWXhmOl0GSLkpKPcbywk9y3Koj9xR0VxCGUrOJ1GXiBSwHwczBqdX050pGQIFI8sFG2U4Es5bMdRTo4VLEmm2plF2iZ7QIg9j0qgLRP_4Pi4JTJ6nbMuw%3D%3D"></script>
                                 <div class="list-wrapper">
                                     <div class="list-item">первая аренда <span>со скидкой 20%</span></div>
                                     <div class="list-item">третий день аренды <span>бесплатно</span></div>
@@ -409,23 +418,29 @@
                                 <div class="rent-content__conditionals">
                                     <p>Условия размещения</p>
                                     <div class="rent-content__conditionals-items">
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab rent-content__conditionals-tab">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">свободное пространство</div>
-                                            <div class="tab__value">1 м<sup>2</sup></div>
+                                            <div class="">1 м<sup>2</sup></div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab rent-content__conditionals-tab">
                                             <div class="tab__dot"></div>
                                             <div class="tab__key">питание</div>
-                                            <div class="tab__value">220В</div>
+                                            <div class="">220В</div>
                                         </div>
-                                        <div class="second-screen__tab tab">
+                                        <div class="second-screen__tab tab rent-content__conditionals-tab">
                                             <div class="tab__dot"></div>
-                                            <div class="tab__key">наличие свободного пространства позади для эффекта прозрачности</div>
+                                            <div class="tab__key">наличие свободного пространства позади для эффекта
+                                                прозрачности</div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="screen seventh-screen">
+                        <div class="container-page">
+                            
                         </div>
                     </div>
                 </div>
