all screens done and forms work

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,7 +1,49 @@
 </main>
-<footer>
-    
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer__content container-content">
+            <div class="footer__part footer__left">
+                <div class="footer__logo"><img src="../img/ico/logo-footer.svg" alt=""></div>
+            </div>
+            <div class="footer__part footer__center">
+                <ul class="footer__block footer__nav">
+                    <li class="nav__item footer__item footer__title">Навигация</li>
+                    <li class="nav__item footer__item">О компании</li>
+                    <li class="nav__item footer__item">Каталог</li>
+                    <li class="nav__item footer__item">Технологии</li>
+                    <li class="nav__item footer__item">Контакты</li>
+                    <li class="nav__item footer__item">Готовые решения</li>
+                </ul>
+                <ul class="footer__block footer__nav">
+                    <li class="nav__item footer__item footer__title">Продукция</li>
+                    <li class="nav__item footer__item">Интерактивные панели</li>
+                    <li class="nav__item footer__item">Видеостены</li>
+                    <li class="nav__item footer__item">OLED экраны</li>
+                    <li class="nav__item footer__item">Экраны разных геометрических форм</li>
+                </ul>
+                <ul class="footer__block footer__nav">
+                    <li class="nav__item footer__item footer__title">Технологии</li>
+                    <li class="nav__item footer__item">Кейсы компании</li>
+                    <li class="nav__item footer__item">Сферы применения</li>
+                    <li class="nav__item footer__item">Готовые решения</li>
+                    <li class="nav__item footer__item">Разработка b2b решений</li>
+                </ul>
+            </div>
+            <div class="footer__part footer__right">
+                <address>г. Москва, 2-й Южнопортовый пр., 26Ас32</address>
+                <p>Пн-Пт с 10:00 до 19:00</p>
+                <p>+7 (929) 676-46-82</p>
+                <div class="footer__socials socials">
+                    <div class="socials__item"><img class="socials__ico" src="../img/ico/tg-ico.svg" alt=""></div>
+                    <div class="socials__item"><img class="socials__ico" src="../img/ico/youtube-ico.svg" alt=""></div>
+                    <div class="socials__item"><img class="socials__ico" src="../img/ico/inst-ico.svg" alt=""></div>
+                </div>
+                <a class="footer__politica" href="#">Политика конфиденциальности</a>
+            </div>
+        </div>
+    </div>
 </footer>
 <script src="js/app.min.js"></script>
 </body>
+
 </html>
