layout is done!

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -5,7 +5,7 @@
             <div class="footer__part footer__left">
                 <div class="footer__logo"><img src="../img/ico/logo-footer.svg" alt=""></div>
             </div>
-            <div class="footer__part footer__center">
+            <div class="footer__part footer__center for-desc-flex">
                 <ul class="footer__block footer__nav">
                     <li class="nav__item footer__item footer__title">Навигация</li>
                     <li class="nav__item footer__item">О компании</li>
@@ -38,8 +38,10 @@
                     <div class="socials__item"><img class="socials__ico" src="../img/ico/youtube-ico.svg" alt=""></div>
                     <div class="socials__item"><img class="socials__ico" src="../img/ico/inst-ico.svg" alt=""></div>
                 </div>
-                <a class="footer__politica" href="#">Политика конфиденциальности</a>
             </div>
+        </div>
+        <div class="footer__politica">
+            <a class="" href="#">Политика конфиденциальности</a>
         </div>
     </div>
 </footer>
