--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -58,15 +58,20 @@
                                 </div>
                             </header>
 
-                            <h1 class="title first-screen__first-title" data-firstScreen-title="1-title">Уникальная
+                            <h1 class="title first-screen__first-title animate-element" data-animate="firstScreen">Уникальная
                                 технология,
-                                которую легко применить уже сегодня</h1>
+                                которую легко применить уже сегодня
+                            </h1>
+                            <h1 class="title first-screen__first-title animate-element" style="display: none;" data-animate="firstScreen">VR-эффект без дополнительного оборудования
+                            </h1>
+                            <h1 class="title first-screen__first-title animate-element" style="display: none;" data-animate="firstScreen">OLED-transparent для реализации самых креативных рекламных решений
+                            </h1>
+                            
                             <div class="rama">
-                                <div id="switcher" class="switcher screen__content"
-                                    data-firstScreen-content="1-content">
+                                <div id="switcher" class="switcher screen__content">
                                     <div class="switcher__holder">
                                         <img src="../img/ico/switcher1.svg" alt="">
-                                        <div class="switcher__toggler"></div>
+                                        <div class="switcher__toggler animate-element" data-animate="firstScreen"></div>
                                     </div>
                                 </div>
                                 <div class="first-screen__content" data-firstScreen-content="2-content"><img
