--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -62,9 +62,9 @@
                                 технология,
                                 которую легко применить уже сегодня
                             </h1>
-                            <h1 class="title first-screen__first-title animate-element" style="display: none;" data-animate="firstScreen">VR-эффект без дополнительного оборудования
+                            <h1 class="title first-screen__first-title animate-element" data-animate="firstScreen">VR-эффект без дополнительного оборудования
                             </h1>
-                            <h1 class="title first-screen__first-title animate-element" style="display: none;" data-animate="firstScreen">OLED-transparent для реализации самых креативных рекламных решений
+                            <h1 class="title first-screen__first-title animate-element" data-animate="firstScreen">OLED-transparent для реализации самых креативных рекламных решений
                             </h1>
                             
                             <div class="rama">
