--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -191,7 +191,7 @@
 
                 </div>
             </div>
-            <div class="screen third-screen third-screen--filter scrolling-item">
+            <div class="screen third-screen scrolling-item">
                 <div class="container-page">
                     <div class="container-content">
                         <header class="header">
@@ -217,9 +217,9 @@
                             </div> -->
                         </header>
                         <div class="third-screen__content">
-                            <div class="third-screen__text-block">
-                                <h2>OLED — это высокотехнологичное актуальное решение для создания дисплеев.</h2>
-                                <p>Его главные преимущества: дисплею не нужен каркас и внешняя подсветка! Потому что он
+                            <div class="third-screen__text-block animate-element">
+                                <h2 class="animate-element">OLED — это высокотехнологичное актуальное решение для создания дисплеев.</h2>
+                                <p class="animate-element">Его главные преимущества: дисплею не нужен каркас и внешняя подсветка! Потому что он
                                     основан на технологии органических светодиодов, которые излучают свет
                                     самостоятельно,
                                     когда через них проходит электрический ток.</p>
